--- a/src/scss/components/common/logo/_logo.scss
+++ b/src/scss/components/common/logo/_logo.scss
@@ -4,9 +4,10 @@
     #{$component}{
         display: flex;
         align-items: center;
+        position: relative;
         column-gap: 5px;
-        height: 50px;
         margin: 0;
+        padding-left: 42px;
 
         @include bp("sm", "up"){
             column-gap: 10px;
