--- a/src/scss/components/common/section/__subtitle.scss
+++ b/src/scss/components/common/section/__subtitle.scss
@@ -28,4 +28,11 @@
             }
         }
     }
+
+    .section--faq{
+        #{$component}{
+            margin-bottom: 30px;
+            font-size: 20px;
+        }
+    }
 }
