--- a/src/scss/components/common/section/_index.scss
+++ b/src/scss/components/common/section/_index.scss
@@ -6,8 +6,10 @@
 	@import "_text";
 	@import "_contacts";
 	@import "_contact";
+	@import "_controls";
 	@import "_control";
 	@import "_socials";
+	@import "_delimiter";
 
 	@import "_cases";
 	@import "_team";
