--- a/src/template-parts/pages/main/hero.pug
+++ b/src/template-parts/pages/main/hero.pug
@@ -2,9 +2,17 @@ section.section.-hero#sectionHero
     ._container.container
         ._inner
             h1._title 
-                | Найдем девушку для вашего счастья в личной жизни
+                | Помогаем создавать искренние отношения на всю жизнь
 
             ._text 
                 p
-                    | Задаете требуемые критерии, например она любит детей и хочет 
-                    | стать многодетной мамой для продолжения вашей династии
+                    | Через массовый поиск находим лучших именно для Вас. Не нужно 
+                    | конкурировать за внимание с тысячами других, как на сайтах знакомств. 
+                    | Возможна полная анонимность – типажные фото вместо Ваших.
+
+            ._controls
+                a.button._control(href="men.html")
+                    | Вход для мужчин 
+
+                a.button._control(href="women.html")
+                    | Вход для девушек 
