--- a/src/scss/components/common/header/__contacts.scss
+++ b/src/scss/components/common/header/__contacts.scss
@@ -3,14 +3,15 @@
 
     #{$component}{
         display: flex;
-        margin-left: auto;
+        column-gap: 30px;
 
         @include bp("sm", "down"){
-            flex-direction: column;
-            align-items: flex-end;
-            padding-top: 4px;
+            // flex-direction: column;
+            align-items: center;
+            // padding-top: 4px;
         }
         @include bp("sm", "up"){
+            margin-left: auto;
             column-gap: 30px;
         }
         @include bp("lg", "up"){}
