--- a/src/scss/components/common/header/__inner.scss
+++ b/src/scss/components/common/header/__inner.scss
@@ -5,7 +5,12 @@
         display: flex;
         align-items: center;
 
-        @include bp("sm", "up"){}
+        @include bp("sm", "down"){
+            flex-direction: column;
+            row-gap: 10px;
+        }
+        @include bp("sm", "up"){
+        }
         @include bp("lg", "up"){}        
     }
 }
