--- a/src/scss/components/common/logo/__text.scss
+++ b/src/scss/components/common/logo/__text.scss
@@ -2,15 +2,20 @@
     $component: ".logo__text";
 
     #{$component}{
-        width: 155px;
-        font-size: 12px;
-        line-height: 130%;
+        // width: 155px;
+        font-size: 20px;
+        line-height: 1em;
+
+        @include bp("sm", "down"){
+            // text-align: center;
+        }
 
         @include bp("sm", "up"){
-            width: 210px;
-            font-size: 16px;
+            width: 300px;
+            line-height: 110%;
         }
-        @include bp("lg", "up"){}
+        @include bp("lg", "up"){
+        }
     }
 
     .header__logo{
