--- a/src/scss/components/pages/person/_person.scss
+++ b/src/scss/components/pages/person/_person.scss
@@ -13,14 +13,16 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            flex-basis: 100%;
 
             @include bp("sm", "up"){
-                flex-basis: calc(50% - 15px);
             }
             @include bp("lg", "up"){
-                flex: 1;
             }
+        }
+
+        .swiper-button-prev,
+        .swiper-button-next{
+            color: get-color(blue);
         }
     }
 }
