--- a/src/template-parts/mixins/picture.pug
+++ b/src/template-parts/mixins/picture.pug
@@ -1,5 +1,6 @@
 mixin picture(name, type, width, height)
     picture(class!=attributes.class)
-        each val in type
-            source(srcset="img/" + name + "." + val type="image/" + val)
+        each val, index in type
+            if index > 0 
+                source(srcset="img/" + name + "." + val type="image/" + val)
         img(src="img/" + name + "." + type[0] width=width height=height alt=name loading="lazy")
