Страницы девушкам и женщинам

--- a/src/scss/components/common/footer/__logo.scss
+++ b/src/scss/components/common/footer/__logo.scss
@@ -5,7 +5,8 @@
         color: get-color(white);
 
         @include bp("lg", "down"){
-            justify-content: center;
+            flex-basis: 33%;
+            margin-bottom: 20px;
         }
         @include bp("sm", "up"){
             flex-basis: 100%;
