--- a/src/scss/components/pages/_index.scss
+++ b/src/scss/components/pages/_index.scss
@@ -1,4 +1,7 @@
 @import "cases/index";
 @import "case/index";
+@import "persons/index";
 @import "person/index";
+@import "steps/index";
+@import "step/index";
 @import "faq/index";
