--- a/src/template-parts/common/faq.pug
+++ b/src/template-parts/common/faq.pug
@@ -16,10 +16,10 @@ section.section.-faq#sectionFaq
 
                             ._text
                                 != item.text
-            ._delimiter
+                ._delimiter
 
             if settings.page.faq.women.length
-                if settings.page.name != "women"
+                if settings.page.name != "women" && settings.page.name != "ladies"
                     h3._subtitle
                         | Женщин
 
