--- a/src/template-parts/common/team.pug
+++ b/src/template-parts/common/team.pug
@@ -7,7 +7,7 @@ section.section.-team#sectionTeam
             ._team.swiper.js-carousel-team
                 .swiper-wrapper
                     each i in [1, 2, 3, 4]
-                        .person.swiper-slide   
+                        .person.js-carousel-team-person
                             +picture("team_person", ["jpg", "webp"], 380, 380)._image
 
                             span._name 
