--- a/src/template-parts/pages/main/hero.pug
+++ b/src/template-parts/pages/main/hero.pug
@@ -14,5 +14,5 @@ section.section.-hero#sectionHero
                 a.button._control(href="men.html")
                     | Вход для мужчин 
 
-                a.button._control(href="women.html")
+                a.button._control(href="ladies.html")
                     | Вход для девушек 
