--- a/src/women.pug
+++ b/src/women.pug
@@ -3,56 +3,40 @@ extends ./template-parts/layout
 block append settings
     -
         settings.page.name = 'women';
-        settings.page.stages = [{
-            title: 'Постановка задачи',
-            text: `<p>Получаем список ваших пожеланий. Какой видите свою будущую семью.</p>`
+        settings.page.steps = [{
+            title: 'Персональная, но обезличенная страница заказчицы',
+            text: `<p>Размещаем типажными фото.</p>`
         },{
-            title: 'Подписание договора и NDA',
-            text: `<p>В договоре прописываем объемы работ и критерии их выполнения.</p>`
+            title: 'Массовая реклама в Яндексе',
+            text: `<p>Задаем возраст, регион, уровень дохода аудитории. Например за 100 000 руб. в среднем привлекаем 2500 мужчин по выбранным критериям.</p>`
         },{
-            title: 'Поиск',
-            text: `<p>Например, запуск рекламной компании на страницу клиента с типажными фотографиями (для полной конфиденциальности).</p>`
+            title: 'Менеджеры фильтруют кандидатов',
+            text: `<p>С каждым проводим интервью, чтобы отобрать только подходящих под ваши запросы.</p>`
         },{
-            title: 'Предварительный отбор',
-            text: `<p>Анализ фото и информации по девушкам, оставившим контакты. Задаем уточняющие вопросы, по необходимости запрашиваем дополнительные фото.</p>`
+            title: 'Проверка мужчины по открытым источникам',
+            text: `<p>Ищем негативное прошлое мужчины, проверяем правдивость его слов.</p>`
         },{
-            title: 'Собеседование кандидаток и презентация им заказчика.',
-            text: `<p>Собеседование проводится по видео связи. Презентуем мужчину в утвержденном им объеме.</p>`
-        },{
-            title: 'Проверка кандидаток по трем факторам',
-            text: `<ol>
-                        <li>Паспорт, ФИО, год рождение, семейное положение, дети</li>
-                        <li>Анализ соц сетей включая сервис Findclone (поиск страниц клонов). Изучаем удаленные ранее анкеты. Находим ее на фотографиях в VK у других пользователей. Анализируем инстаграм.</li>
-                        <li>Анализ по сервису Getcotact.</li>
-                   </ol>`
-        },{
-            title: 'Создание анкет кандидаток',
-            text: `<p>Готовим анкеты с фото без ретуши, фильтров, фейсапа и с важной для заказчика информацией.</p>`
-        },{
-            title: 'Передача анкет и контактов',
-            text: `<p>По желанию клиента организовываем встречу.</p>`
-        },{
-            title: 'Финальный выбор',
-            text: `<p>Поиск прекращаем. Работа по договору выполнена.</p>`
+            title: 'Передача анкет лучших претендентов',
+            text: `<p>Знакомим в Вами и отходим в сторону. Не навязываем дополнительных услуг.</p>`
         }];
         settings.page.warranty = [{
-            title: 'Какая мотивация у девушек знакомиться?',
+            title: 'Какая мотивация у мужчин знакомиться?',
             text: `<p>Разная. Взрослые и успешные женщины ищут партнера равного статуса. Они добились многого, вырастили детей и хотят просто счастья.<br>Молодые девушки ищут опору и серьезного партнера для отношений и брака. Им нравится идея, что мужчина - это лидер, который берет на себя роль защитника и наставника.<br>В то же время мужчина должен понимать, что задача по завоеванию сердца дамы лежит полностью на нем. Мы находим подходящих и заинтересованных кандидаток, но не можем гарантировать вам семейное счастье.</p>
                     <p>Мы не работаем с девушками, которые указывают на первом месте по значимости фактор состоятельности мужчины.<br>Мы не сотрудничаем с эскортницами и содержанками.</p>`
         },{
-            title: 'Как быстро находятся кандидатки?',
+            title: 'Как быстро находятся кандидат?',
             text: `<p>Если речь идет про подбор по параметрам, то не ранее чем через неделю мы предоставим вам первую кандидатку.<br>Средний срок контракта 3 месяца, в течение этого срока мы равномерно предоставляем вам 5-8 финалисток, максимально подходящих под запрос и заинтересованных в знакомстве с вами.<br>Здесь важен фактор равномерности, чтобы мужчина успел пообщаться с каждой девушкой и не заставлял ее ждать слишком долго.</p>`
         },{
             title: 'Какая статистика? Сколько пар женятся?',
             text: `<p>Мы не беспокоим наших клиентов и не опрашиваем их через полгода или год о статусе их отношений. Мы специализируемся на подборе, а не на построении отношений. <br>Поэтому четкой статистики о браках нет. <br>Но есть статистика подбора. <br>30% клиентов останавливаются уже на первой кандидатке, хотя в договоре предусмотрено 5-8. Что говорит о высокой степени попадания наших менеджеров в ожидания клиентов. <br>65% клиентов не доходят по последней кандидатки по договору и останавливают поиски. <br>Только 10% наших клиентов продолжают поиски далее сверх оговоренного количества и 5% прекращают их вовсе по разным причинам: передумал, сошелся с женой, переехал в другую страну.</p>`
         },{
-            title: 'Где гарантия, что девушки, пришедшие на свидание, не подставные?',
+            title: 'Где гарантия, что мужчины, пришедшие на свидание, не подставные?',
             text: `<p>Некоторые клиенты опасаются, что мы мотивируем финансово мотивируем девушек специально сходить на свидания ради выполнения нами договора. <br>Аргументы, почему этого быть не может: </p><ol><li>Если на свидании девушка показывает незаинтересованность - это причина для бесплатной замены. Т.е. мы ищем новую кандидатку без дополнительной оплаты.</li><li>Мы работаем с крайне успешными и интересными мужчинами. 80-90% любых девушек будут с радостью общаться с нашими кандидатами без какой-либо мотивации. Почти каждая девушка мечтает выйти замуж за такого кандидата.</li><li>Если допустить наличие такой договоренности между нами и девушками, то в этом есть состав мошенничества, что уголовно наказуемо. Ведь мы получаем выгоду, злоупотребляя доверием клиентов. Показывать лица, имена, раскрывать секреты в соцсетях, чтобы заниматься мошенничеством в отношении серьезных мужчин, среди которых крупные бизнесмены, политики и чиновники? Это было бы плохой идей.</li></ol>`
         },{
             title: 'Почему есть предоплата? Почему оплата не по результату?',
             text: `<p>Во-первых, предоплата мотивирует мужчину серьезно отнестить к процессу. Ведь успех зависит не только от качества поиска и подбора, но и от качества коммуникации самого заказчика с найденными девушками. Мужчина, не заплативший ничего, вряд ли будет относиться к процессу так же, как тот, который внес предоплату.</p><p>Во-вторых, в начале кастинга мы тратим деньги. Мы оплачиваем доступ на Хедхантер, бонусы скаутам и рекламу. Если в финале мы не получим оплату, то этот риск придется переложить на других клиентов и существенно поднять цены. </p><p>В то же время в договоре прописан возврат денег, пропорционально невыполненной работе. В нашей практике было несколько случаев, когда приходилось это делать. Но мы учли ошибки и сейчас не беремся за проекты, в которых не уверены.</p>`
         },{
-            title: 'Что будет, если с выбранной девушкой мы не сойдемся характерами и расстанемся?',
+            title: 'Что будет, если с выбранным мужчиной мы не сойдемся характерами и расстанемся?',
             text: `<p>Мы даем гарантию бесплатной замены финальной кандидатки в срок до 90 дней. Т.е. после того, как мы заключили, что работа выполнена полностью, после полной оплаты договора, у вас есть 90 дней, чтобы попросить нас о бесплатной замене.</p>`
         }];
         settings.page.faq.women = [{
@@ -77,4 +61,8 @@ block append settings
         }];
 
 block content
-    //- include ./template-parts/pages/main/hero
+    include ./template-parts/pages/women/hero
+    include ./template-parts/pages/women/steps
+    include ./template-parts/pages/women/benefits
+    include ./template-parts/pages/women/warranty
+    include ./template-parts/pages/women/price
