--- a/src/scss/components/common/section/__team.scss
+++ b/src/scss/components/common/section/__team.scss
@@ -2,17 +2,16 @@
     $component: ".section__team";
 
     #{$component}{
-        // display: flex;
-        // gap: 30px;
-        max-width: 500px;
-        margin: 0 auto;
-
         @include bp("lg", "down"){
-            // flex-wrap: wrap;
+            max-width: 500px;
+            margin: 0 auto;
         }
         @include bp("sm", "up"){
         }
         @include bp("lg", "up"){
+            display: flex;
+            flex-wrap: wrap;
+            gap: 30px;
         }
     }
 }
